<resources>
    <string name="app_name">alexandra</string>
    <string name="bem_vindas_">Bem vindas ao nosso salão.\n Entre e descubra um mundo feito\n para você!</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_su">Esqueceu sua senha?</string>
    <string name="profissional">Profissional</string>
    <string name="seg">Seg</string>
    <string name="_12">12</string>
    <string name="oi">Oi</string>
    <string name="hoje_o_aniv">Hoje é o aniversario de ...</string>
    <string name="enviar">Enviar mensagem</string>
    <string name="sua_agenda">Sua Agenda</string>
    <string name="agendar">Agendar</string>
    <string name="cadastro_de">Cadastro de Clientes</string>
    <string name="salvar">Salvar</string>
    <string name="acessar_a_tela_de_cadastro">acessar a tela de cadastro</string>
    <string name="acessar_a_tela_de_agendamento">acessar a tela de agendamento</string>
    <string name="acessar_a_tela_usuario">acessar_a_tela_usuario</string>
    <string name="acessar_a_tela_inicial">acessar_a_tela_inicial</string>
    <string name="lista_de_ag">Lista de agendamentos</string>
    <string name="abril">Abril</string>
    <string name="pr_ximo_m_s">Próximo mês</string>
    <string name="m_s_anterior">Mês anterior</string>
    <string name="Deletar">Deletar</string>
    <string name="nome_do_cliente">Nome do cliente</string>
    <string name="telefone_do_cliente">Telefone</string>
    <string name="email_do_cliente">E-mail</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="selecione_a_hora">Hora</string>
    <string name="foto_do_profissional">Foto do profissional</string>
    <string name="nome_do_profissional">Nome do Profissional</string>
    <string name="digite_suas_observacoes_aqui">Digite suas observações aqui</string>
    <string name="Ecluir">Excluir</string>
    <string name="Tirar_Print">Compartilhar</string>
    <string name="hh_mm">HH:MM</string>
    <string name="alexandra" />
    <string name="configuracoes">Configurações</string>
    <string name="conta">Conta</string>
</resources>