<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:fitsSystemWindows="false"
    tools:context=".LoginProfissional">

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="440dp"
        android:layout_height="438dp"
        app:layout_constraintTop_toTopOf="@id/main"
        android:layout_marginTop="-223dp"
        app:layout_constraintStart_toStartOf="@id/main"
        android:layout_marginStart="-197dp"
        android:background="@drawable/rectangle_5"
        />

    <TextView
        android:id="@+id/oi"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        app:layout_constraintStart_toStartOf="@id/main"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="@id/main"
        android:layout_marginTop="60dp"
        android:text="@string/oi"
        android:textAppearance="@style/oi"/>

    <TextView
        android:id="@+id/nome_profissional"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        app:layout_constraintTop_toBottomOf="@+id/oi"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:text="@string/alexandra"
        android:textAppearance="@style/alexandra"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintTop_toTopOf="@id/main"
        android:layout_marginStart="260dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ellipse_2" app:civ_border_width="2dp" app:civ_border_color="@color/black" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/birthday_clients_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="180dp" android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="134dp"
        android:orientation="horizontal" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintTop_toTopOf="@id/main"
        tools:listitem="@layout/item_birthday_card" />

    <TextView
        android:id="@+id/tv_no_birthdays_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Não há aniversariantes hoje."
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:gravity="center"
        android:visibility="gone" app:layout_constraintStart_toStartOf="@id/birthday_clients_recycler_view"
        app:layout_constraintEnd_toEndOf="@id/birthday_clients_recycler_view"
        app:layout_constraintTop_toTopOf="@id/birthday_clients_recycler_view"
        app:layout_constraintBottom_toBottomOf="@id/birthday_clients_recycler_view"
        />

    <TextView
        android:id="@+id/sua_agenda"
        android:layout_width="115dp"
        android:layout_height="22dp"
        app:layout_constraintTop_toTopOf="@id/main"
        android:layout_marginTop="315dp"
        app:layout_constraintStart_toStartOf="@id/main"
        android:layout_marginStart="20dp"
        android:text="@string/sua_agenda"
        android:textAppearance="@style/sua_agenda"
        android:gravity="top" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_agendamentos_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintTop_toBottomOf="@id/sua_agenda"
        app:layout_constraintBottom_toTopOf="@id/group_35"
        tools:listitem="@layout/item_agendamento"/>

    <TextView
        android:id="@+id/tv_no_agendamentos_today"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Não há agendamentos para hoje."
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/lista_agendamentos_recycler_view"
        app:layout_constraintEnd_toEndOf="@id/lista_agendamentos_recycler_view"
        app:layout_constraintTop_toTopOf="@id/lista_agendamentos_recycler_view"
        app:layout_constraintBottom_toBottomOf="@id/lista_agendamentos_recycler_view"
        />

    <FrameLayout
        android:id="@+id/group_35"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:paddingBottom="8dp"
        android:background="@drawable/rectangle_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:id="@+id/rectangle_5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rectangle_7"/>

        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:background="@drawable/ic_home"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/acessar_a_tela_inicial"/>

        <ImageView
            android:id="@+id/icon_calendar"
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:background="@drawable/ic_calendar"
            android:layout_marginStart="100dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/acessar_a_tela_de_agendamento"/>

        <ImageView
            android:id="@+id/icon_agendar"
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:background="@drawable/ic_agendar"
            android:layout_marginStart="190dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/acessar_a_tela_de_cadastro"/>

        <ImageView
            android:id="@+id/icon_add"
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:background="@drawable/ic_add"
            android:layout_marginStart="268dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/acessar_a_tela_de_cadastro"/>

        <ImageView
            android:id="@+id/icon_user"
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:background="@drawable/ic_user"
            android:layout_marginStart="344dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/acessar_a_tela_usuario"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>